--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,5 @@
 *.pkl
 /data
 .idea
-./faces_clustering/__pycache__
-./mtcnn_torch/__pycache__
-./sphere_mtcnn/__pycache__
-./spherenet/__pycache__
+*.pyc
+*.pyo
